2DO COMMIT PROYECTOS

--- a/P2/proyectos/menu_horizontal_CSS/css/estilosmenu.css
+++ b/P2/proyectos/menu_horizontal_CSS/css/estilosmenu.css
@@ -1,4 +1,4 @@
-/* Estilos aplicados para crear el menu horizontal en CSS */
+/* Estilos aplicados para crear el menu horizontal  CSS */
 #index{
     background-color: gray;
     padding: 2rem;
