--- a/P3/PracticasDjango/proyectoUTDdjango/mainapp/templates/layouts/layouts.html
+++ b/P3/PracticasDjango/proyectoUTDdjango/mainapp/templates/layouts/layouts.html
@@ -30,7 +30,7 @@
        </div>
     </section>
     <footer>
-        <p>Django con PauOnline &copy; 2024 | Visitado el: {% now "Y-m-d H:i" %}</p>
+        <p>Django con PaezOnline &copy; 2024 | Visitado el: {% now "Y-m-d H:i" %}</p>
     </footer>
 </body>
 </html>
